# Customer-Service-Multimodal-Trainer

./: .env  README.md  env.example  pyproject.toml
evals/: config.py
evals/audio/: evaluators.py
evals/text/: test_cases.py
evals/video/: evaluators.py
multimodal_moderation/: gradio_app.py
multimodal_moderation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
multimodal_moderation/agents/: image_agent.py  text_agent.py
multimodal_moderation/types/: model_choice.py  moderation_result.py
tests/: conftest.py  test_text_agent.py  test_video_agent.py
